--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/KarlNaumann/MacroStat
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+#    Documentation = https://pyscaffold.org/
+    Source = https://github.com/KarlNaumann/MacroStat/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -49,6 +49,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    pandas
 
 
 [options.packages.find]
