[FIX] Numpy and Scipy dependencies added
- Numpy comes with pandas, but explicit is clearer
- Scipy is needed for the sobol sampler to generate the sobol series

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata
+    numpy
     pandas
+    scipy
     torch >= 2.1.0
     tqdm
 
