--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,96 @@
-aiofiles @ file:///croot/aiofiles_1683773582346/work
-aiosqlite @ file:///croot/aiosqlite_1683773899903/work
-anyio @ file:///croot/anyio_1706220167567/work
-appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///work/ci_py311/argon2-cffi-bindings_1676823553406/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-async-lru @ file:///croot/async-lru_1699554519285/work
-attrs @ file:///croot/attrs_1695717823297/work
-Babel @ file:///work/ci_py311/babel_1676825020543/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///croot/beautifulsoup4-split_1681493039619/work
-black @ file:///croot/black_1712698501521/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-Bottleneck @ file:///croot/bottleneck_1707864210935/work
-Brotli @ file:///work/ci_py311/brotli-split_1676830125088/work
+aiofiles==22.1.0
+aiosqlite==0.18.0
+anyio==4.2.0
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+black==24.3.0
+bleach==4.1.0
+Bottleneck==1.3.7
+Brotli==1.0.9
 brotlipy==0.7.0
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1724028158384/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
-cffi @ file:///croot/cffi_1700254295673/work
-chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1724954797915/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click @ file:///croot/click_1698129812380/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///croot/comm_1709322850197/work
-ConfigUpdater @ file:///home/conda/feedstock_root/build_artifacts/configupdater_1701116575104/work
-contourpy @ file:///croot/contourpy_1700583582875/work
-cryptography @ file:///croot/cryptography_1710350347627/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-distlib @ file:///home/conda/feedstock_root/build_artifacts/distlib_1702383208639/work
-entrypoints @ file:///work/ci_py311/entrypoints_1676823319002/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///work/ci_py311_2/python-fastjsonschema_1679340124475/work
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1726613473834/work
-fonttools @ file:///croot/fonttools_1713551344105/work
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==2.0.4
+click==8.1.7
+colorama==0.4.6
+comm==0.2.1
+ConfigUpdater==3.2
+contourpy==1.2.0
+cryptography==42.0.5
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.8
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.16.2
+filelock==3.16.1
+fonttools==4.51.0
 fsspec==2024.9.0
-gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
-GitPython @ file:///croot/gitpython_1696936983078/work
+gitdb==4.0.7
+GitPython==3.1.37
 greenlet==3.0.3
-idna @ file:///work/ci_py311/idna_1676822698822/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1724187233579/work
-ipykernel @ file:///croot/ipykernel_1705933831282/work
-ipython @ file:///croot/ipython_1704833016303/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///croot/ipywidgets_1709574692113/work
-jedi @ file:///work/ci_py311_2/jedi_1679336495545/work
-Jinja2 @ file:///croot/jinja2_1706733616596/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///croot/jsonschema_1699041609003/work
-jsonschema-specifications @ file:///croot/jsonschema-specifications_1699032386549/work
-jupyter @ file:///croot/jupyter_1707947101020/work
-jupyter-console @ file:///croot/jupyter_console_1679999630278/work
-jupyter-events @ file:///croot/jupyter_events_1699282461638/work
-jupyter-lsp @ file:///croot/jupyter-lsp-meta_1699978238815/work
-jupyter-ydoc @ file:///croot/jupyter_ydoc_1683747223142/work
-jupyter_client @ file:///croot/jupyter_client_1699455897726/work
-jupyter_core @ file:///croot/jupyter_core_1698937308754/work
-jupyter_server @ file:///croot/jupyter_server_1699466442171/work
-jupyter_server_fileid @ file:///croot/jupyter_server_fileid_1684273577568/work
-jupyter_server_terminals @ file:///croot/jupyter_server_terminals_1686870725608/work
-jupyter_server_ydoc @ file:///croot/jupyter_server_ydoc_1686767404829/work
-jupyterlab @ file:///croot/jupyterlab_1706802623017/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///croot/jupyterlab_widgets_1709322880313/work
-jupyterlab_server @ file:///croot/jupyterlab_server_1699555425460/work
-kiwisolver @ file:///work/ci_py311/kiwisolver_1676827230232/work
-lxml @ file:///croot/lxml_1695058164555/work
+idna==3.4
+importlib_metadata==8.4.0
+ipykernel==6.28.0
+ipython==8.20.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.2
+jedi==0.18.1
+Jinja2==3.1.3
+json5==0.9.6
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.8.0
+jupyter-lsp==2.2.0
+jupyter-ydoc==0.2.4
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.10.0
+jupyter_server_fileid==0.9.0
+jupyter_server_terminals==0.4.4
+jupyter_server_ydoc==0.8.0
+jupyterlab==4.0.11
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==3.0.10
+jupyterlab_server==2.25.1
+kiwisolver==1.4.4
+lxml==4.9.3
 MacroStat==0.3.0
-MarkupSafe @ file:///croot/markupsafe_1704205993651/work
-matplotlib @ file:///croot/matplotlib-suite_1713336378214/work
-matplotlib-inline @ file:///work/ci_py311/matplotlib-inline_1676823841154/work
-mistune @ file:///work/ci_py311/mistune_1676823683049/work
-mkl-fft @ file:///croot/mkl_fft_1695058164594/work
-mkl-random @ file:///croot/mkl_random_1695059800811/work
+MarkupSafe==2.1.3
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+mistune==2.0.4
+mkl-fft==1.3.8
+mkl-random==1.2.4
 mkl-service==2.4.0
 mpmath==1.3.0
 msgpack==1.0.5
 munkres==1.1.4
-mypy-extensions @ file:///croot/mypy_extensions_1695130926492/work
-nbclassic @ file:///croot/nbclassic_1699542793266/work
-nbclient @ file:///croot/nbclient_1698934205032/work
-nbconvert @ file:///croot/nbconvert_1699022732553/work
-nbformat @ file:///croot/nbformat_1694616755618/work
+mypy-extensions==1.0.0
+nbclassic==1.0.0
+nbclient==0.8.0
+nbconvert==7.10.0
+nbformat==5.9.2
 neovim==0.3.1
-nest-asyncio @ file:///croot/nest-asyncio_1708532673751/work
+nest-asyncio==1.6.0
 networkx==3.3
-notebook @ file:///croot/notebook_1708029864779/work
-notebook_shim @ file:///croot/notebook-shim_1699455894279/work
-numexpr @ file:///croot/numexpr_1696515281613/work
-numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp311-cp311-linux_x86_64.whl#sha256=5f96f274d410a1682519282ae769c877d32fdbf171aa8badec7bf5e1d3a1748a
+notebook==7.0.8
+notebook_shim==0.2.3
+numexpr==2.8.7
+numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -103,76 +103,79 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.77
 nvidia-nvtx-cu12==12.1.105
-overrides @ file:///croot/overrides_1699371140756/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
-pandas @ file:///croot/pandas_1709590491089/work/dist/pandas-2.2.1-cp311-cp311-linux_x86_64.whl#sha256=0a2793a31a0135a35735e1431d453a06186a3a7c607d9b441d9bd5f0fe4ded31
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pathspec @ file:///work/ci_py311_2/pathspec_1679337288229/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-pillow @ file:///croot/pillow_1707233021655/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
-pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1713667077545/work
+overrides==7.4.0
+packaging==24.1
+pandas==2.2.1
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.10.3
+pexpect==4.8.0
+pickleshare==0.7.5
+pillow==10.2.0
+pip==23.3.1
+platformdirs==4.3.6
+pluggy==1.5.0
 ply==3.11
-prometheus-client @ file:///work/ci_py311_2/prometheus_client_1679340520168/work
-prompt-toolkit @ file:///croot/prompt-toolkit_1704404351921/work
-psutil @ file:///work/ci_py311_2/psutil_1679337388738/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///croot/pygments_1684279966437/work
+prometheus-client==0.14.1
+prompt-toolkit==3.0.43
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.15.1
 pynvim==0.5.0
-pyOpenSSL @ file:///croot/pyopenssl_1708380408460/work
-pyparsing @ file:///work/ci_py311/pyparsing_1677811559502/work
-pyproject-api @ file:///home/conda/feedstock_root/build_artifacts/pyproject-api_1726749917781/work
+pyOpenSSL==24.0.0
+pyparsing==3.0.9
+pyproject-api==1.8.0
 PyQt5==5.15.10
-PyQt5-sip @ file:///croot/pyqt-split_1698769088074/work/pyqt_sip
-pyrsistent @ file:///croot/pyrsistent_1704280477440/work
-PyScaffold @ file:///home/conda/feedstock_root/build_artifacts/pyscaffold_1642256338956/work
-PySocks @ file:///work/ci_py311/pysocks_1676822712504/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-json-logger @ file:///croot/python-json-logger_1683823803357/work
-pytz @ file:///croot/pytz_1695131579487/work
-PyYAML @ file:///croot/pyyaml_1698096049011/work
-pyzmq @ file:///croot/pyzmq_1705605076900/work
-qtconsole @ file:///croot/qtconsole_1709231153903/work
-QtPy @ file:///croot/qtpy_1700144840038/work
-referencing @ file:///croot/referencing_1699012038513/work
-requests @ file:///croot/requests_1707355572290/work
-rfc3339-validator @ file:///croot/rfc3339-validator_1683077044675/work
-rfc3986-validator @ file:///croot/rfc3986-validator_1683058983515/work
-rpds-py @ file:///croot/rpds-py_1698945930462/work
+PyQt5-sip==12.13.0
+pyrsistent==0.20.0
+PyScaffold==4.1.4
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.30.2
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.6
 scipy==1.14.1
-Send2Trash @ file:///croot/send2trash_1699371139552/work
-setuptools-scm @ file:///home/conda/feedstock_root/build_artifacts/setuptools_scm_1715083232181/work
-sip @ file:///croot/sip_1698675935381/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
-sniffio @ file:///croot/sniffio_1705431295498/work
-soupsieve @ file:///croot/soupsieve_1696347547217/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+Send2Trash==1.8.2
+setuptools==68.2.2
+setuptools-scm==8.1.0
+sip==6.7.12
+six==1.16.0
+smmap==4.0.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.2.0
 sympy==1.13.3
-terminado @ file:///work/ci_py311/terminado_1677696151350/work
-tinycss2 @ file:///work/ci_py311/tinycss2_1676823757641/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-tomlkit @ file:///home/conda/feedstock_root/build_artifacts/tomlkit_1723631480657/work
+terminado==0.17.1
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.13.2
 torch==2.4.1
-tornado @ file:///croot/tornado_1696936946304/work
-tox @ file:///home/conda/feedstock_root/build_artifacts/tox_1726749968222/work
+tornado==6.3.3
+tox==4.20.0
 tqdm==4.66.5
-traitlets @ file:///work/ci_py311/traitlets_1676823305040/work
+traitlets==5.7.1
 triton==3.0.0
-typing_extensions @ file:///croot/typing_extensions_1705599297034/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-unicodedata2 @ file:///croot/unicodedata2_1713212950228/work
-urllib3 @ file:///croot/urllib3_1707770551213/work
-virtualenv @ file:///home/conda/feedstock_root/build_artifacts/virtualenv_1726642570470/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+typing_extensions==4.9.0
+tzdata==2023.3
+unicodedata2==15.1.0
+urllib3==2.1.0
+virtualenv==20.26.5
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client @ file:///work/ci_py311/websocket-client_1676824890004/work
-widgetsnbextension @ file:///croot/widgetsnbextension_1709322880396/work
-y-py @ file:///croot/y-py_1683555143488/work
-ypy-websocket @ file:///croot/ypy-websocket_1684171737040/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1724730934107/work
+websocket-client==0.58.0
+wheel==0.41.2
+widgetsnbextension==4.0.10
+y-py==0.5.9
+ypy-websocket==0.8.2
+zipp==3.20.1
